# fhir-to-mip-schema-converter

./: README.md  pyproject.toml
converter/: fhir2mip.py  parque2csv.py
data/: minimal_fhir.json
tests/: test_fhir2mip.py
