[tool.poetry]
name = "fhir-to-mip-schema-converter"
version = "0.1.0"
description = ""
authors = ["Kostas Filippopolitis <kfilippopolitis@athenarc.gr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

